--- a/src/index.html
+++ b/src/index.html
@@ -1,11 +1,9 @@
+<!DOCTYPE html>
 <html>
     <head>
         <title>Main Page</title>
     </head>
-    <body>
-        <h1>Hello World!</h1>
-        We are using node <script>document.write(process.versions.node)</script>,
-        Chrome <script>document.write(process.versions.chrome)</script>,
-        and Electron <script>document.write(process.versions.electron)</script>.
+    <body bgcolor = '#3c3c3c'>
+        
     </body>
 </html>
