Finished first basic version

--- a/src/index.html
+++ b/src/index.html
@@ -8,22 +8,13 @@
     <body>
         <div class = "row">
             <div id = "price-container">
-                <p class = "subtext"> Current BTC USD</p>
-                <h1 id = "price">Loading...</h1>
+                <p class = "subtext">Bitcoin</p>
+                <h1 id = "BTC_price">Loading...</h1>
             </div>
-        </div>
-
-        <p class="notify">Notify me when BTC reaches..</p>
-
-        <div class="row2">
-            <div>
-                <input id="notifyVal" placeholder="USD">
-            </div>
-            <button id="updateBtn">Update</button>
-        </div>
-    
-            <a id="closeBtn">Close Window</a><br>
-    
+            <div id = "price-container">
+                    <p class = "subtext">Ethereum</p>
+                    <h1 id = "ETH_price">Loading...</h1>
+                </div>
         </div>
         <script src = "index.js"></script>
     </body>
