updated main files

--- a/src/index.html
+++ b/src/index.html
@@ -9,12 +9,16 @@
         <div class = "row">
             <div id = "price-container">
                 <p class = "subtext">Bitcoin</p>
-                <h1 id = "BTC_price">Loading...</h1>
+                <h1 id = "BTC_price"><img src = "https://www.cryptocompare.com/coins/btc/overview/">Loading...</h1>
             </div>
             <div id = "price-container">
                     <p class = "subtext">Ethereum</p>
                     <h1 id = "ETH_price">Loading...</h1>
-                </div>
+            </div>
+            <div id = "price-container">
+                    <p class = "subtext">EOS</p>
+                    <h1 id = "EOS_price">Loading...</h1>
+            </div>
         </div>
         <script src = "index.js"></script>
     </body>
