Added final cryptos for now

--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
         <div class = "row">
             <div id = "price-container">
                 <p class = "subtext">Bitcoin</p>
-                <h1 id = "BTC_price"><img src = "https://www.cryptocompare.com/coins/btc/overview/">Loading...</h1>
+                <h1 id = "BTC_price">Loading...</h1>
             </div>
             <div id = "price-container">
                     <p class = "subtext">Ethereum</p>
@@ -20,6 +20,21 @@
                     <h1 id = "EOS_price">Loading...</h1>
             </div>
         </div>
+        <div class = "row">
+                <div id = "price-container">
+                    <p class = "subtext">Litecoin</p>
+                    <h1 id = "LTC_price">Loading...</h1>
+                </div>
+                <div id = "price-container">
+                        <p class = "subtext">XRP</p>
+                        <h1 id = "XRP_price">Loading...</h1>
+                </div>
+                <div id = "price-container">
+                        <p class = "subtext">NEO</p>
+                        <h1 id = "NEO_price">Loading...</h1>
+                </div>
+        </div>
+
         <script src = "index.js"></script>
     </body>
 </html>
